refs #58; Prevent horizontal scroll on narrow screens; adjust responsive table column widths

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -96,6 +96,7 @@ main
   flex-direction: column
   margin: 0
   overflow-x: clip
+  overflow-y: scroll
 
 a.breadcrumb
   color: $green
